# rqrisk

./: .gitignore  LICENSE.txt  MANIFEST.in  README.MD  pyproject.toml  requirements.txt  rqrisk.py  setup.cfg  setup.py  test.py  versioneer.py
.github/workflows/: release.yml
rqrisk/: __init__.py  _version.py  risk.py  utils.py
tests/: test.py
