[build-system]
requires = ["setuptools>=61.0.0", "setuptools_scm>=7.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rqrisk"
dynamic = ["version"]
description = "risk calc"
readme = "README.MD"
requires-python = ">=3.7"
authors = [
    {name = "Ricequant"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "numpy",
    "scipy",
    "statsmodels>=0.13.1",
    "importlib_metadata; python_version<'3.8'",
]

[project.urls]
Homepage = "https://www.ricequant.com/"

[tool.setuptools]
packages = ["rqrisk"]
zip-safe = false

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"
write_to = "rqrisk/_version.py"
