
# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.

[metadata]
name = rqrisk
version = 1.0.4

[versioneer]
VCS = git
style = pep440-ricequant
versionfile_source = rqrisk/_version.py
versionfile_build = rqrisk/_version.py
tag_prefix =
parentdir_prefix = rqrisk

